# tenant-service-api

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
common/: models.py
core/: settings.py  urls.py
service/: apps.py  authentication.py  models.py  schema_extensions.py  serializers.py  urls.py  utils.py  views.py
service/management/commands/: __init__.py  load_services.py  populate_services.py
service/migrations/: 0001_initial.py  0002_remove_booking_client_remove_service_provider_and_more.py  0003_remove_payment_booking_service_availability_end_and_more.py  0004_service_category_service_duration_minutes_and_more.py  0005_remove_service_terms_and_conditions_and_more.py  0006_provider_remove_service_provider_id_and_more.py
tenant/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
tenant/management/commands/: create_capsule.py  create_plans.py  delete_plans.py
tenant/signals/: __init__.py  tenant_signals.py
